removed security manager entirely